Added image build

--- a/azure-pipelines-3.yml
+++ b/azure-pipelines-3.yml
@@ -13,6 +13,7 @@ variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
+  imageName: 'pipelines-javascript-docker'
 
 steps:
 - task: NuGetToolInstaller@1
@@ -35,3 +36,11 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+    
+
+- task: Docker@2
+  displayName: Build an image
+  inputs:
+    repository: $(imageName)
+    command: build
+    Dockerfile: app/Dockerfile
